# TetrisAI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
adapters/: README.md
adapters/tetris_game/: GameEnv.cpp  GameEnv.hpp  README.md
agents/: README.md
agents/dqn/: README.md  config.yaml
agents/expectimax/: README.md  config.yaml
agents/heuristic_greedy/: README.md  config.yaml
agents/heuristic_greedy/src/: GreedyAgent.cpp
agents/mcts_default/: README.md  config.yaml
agents/mcts_default/src/: MctsDefaultRolloutAgent.cpp
agents/mcts_greedy/: README.md  config.yaml
agents/mcts_greedy/src/: MctsGreedyRolloutAgent.cpp
agents/mcts_rollout/: README.md  config.yaml  greedy_greedy_noTT.yaml  greedy_greedy_tt.yaml  greedy_random_noTT.yaml  greedy_random_tt.yaml  score_greedy_noTT.yaml  score_greedy_tt.yaml  score_random_noTT.yaml  score_random_tt.yaml
agents/mcts_transposition/: README.md  config.yaml
agents/mcts_transposition/src/: MctsTranspositionAgent.cpp
agents/random_agent/: README.md  config.yaml
apps/: ai_runner.cpp  tetris_batch_runner.cpp  tetris_env_test.cpp
bench/: README.md
bench/reports/: README.md
bench/scenarios/: README.md
config/: batch_runs.yaml
include/tetris_env/: Action.hpp  Agent.hpp  BoardHeuristic.hpp  EpisodeReport.hpp  GreedyAgent.hpp  MctsConfig.hpp  MctsRolloutAgent.hpp  RandomAgent.hpp  RunLogging.hpp  StepResult.hpp  TetrisEnv.hpp  Types.hpp
include/tetris_env/mcts/: DefaultRolloutAgent.hpp  GreedyRolloutAgent.hpp  MctsParams.hpp  TranspositionRolloutAgent.hpp
sdk/: README.md
sdk/include/tetrissdk/: Environment.hpp
src/tetris_env/: BoardHeuristic.cpp  GreedyAgent.cpp  MctsConfig.cpp  MctsRolloutAgent.cpp  RandomAgent.cpp  RunLogging.cpp  TetrisEnv.cpp
src/tetris_env/mcts/default/: MctsDefaultRolloutAgent.cpp
src/tetris_env/mcts/greedy/: MctsGreedyRolloutAgent.cpp
src/tetris_env/mcts/transposition/: MctsTranspositionAgent.cpp
